--- a/.github/workflows/notify-integration-release-manual.yml
+++ b/.github/workflows/notify-integration-release-manual.yml
@@ -54,6 +54,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: hashicorp/integration-release-action
+          ref: staging
           path: ./integration-release-action
       - name: Notify Release
         uses: ./integration-release-action
