--- a/.github/workflows/notify-integration-release-manual.yml
+++ b/.github/workflows/notify-integration-release-manual.yml
@@ -18,33 +18,33 @@ jobs:
     strategy:
       matrix:
         integration_identifier:
-          - "waypoint/aws-alb"
-          - "waypoint/aws-ami"
-          - "waypoint/aws-ec2"
-          - "waypoint/aws-ecr-pull"
-          - "waypoint/aws-ecr"
-          - "waypoint/aws-ecs"
-          - "waypoint/aws-lambda"
-          - "waypoint/lambda-function-url"
-          - "waypoint/aws-ssm"
-          - "waypoint/azure-container-instance"
-          - "waypoint/consul"
-          - "waypoint/docker-pull"
-          - "waypoint/docker-ref"
-          - "waypoint/docker"
-          - "waypoint/exec"
-          - "waypoint/files"
-          - "waypoint/google-cloud-run"
-          - "waypoint/helm"
-          - "waypoint/kubernetes-apply"
-          - "waypoint/kubernetes"
-          - "waypoint/nomad-jobspec-canary"
-          - "waypoint/nomad-jobspec"
-          - "waypoint/nomad"
-          - "waypoint/null"
-          - "waypoint/pack"
-          - "waypoint/terraform-cloud"
-          - "waypoint/vault"
+          - "waypoint/hashicorp/aws-alb"
+          - "waypoint/hashicorp/aws-ami"
+          - "waypoint/hashicorp/aws-ec2"
+          - "waypoint/hashicorp/aws-ecr-pull"
+          - "waypoint/hashicorp/aws-ecr"
+          - "waypoint/hashicorp/aws-ecs"
+          - "waypoint/hashicorp/aws-lambda"
+          - "waypoint/hashicorp/lambda-function-url"
+          - "waypoint/hashicorp/aws-ssm"
+          - "waypoint/hashicorp/azure-container-instance"
+          - "waypoint/hashicorp/consul"
+          - "waypoint/hashicorp/docker-pull"
+          - "waypoint/hashicorp/docker-ref"
+          - "waypoint/hashicorp/docker"
+          - "waypoint/hashicorp/exec"
+          - "waypoint/hashicorp/files"
+          - "waypoint/hashicorp/google-cloud-run"
+          - "waypoint/hashicorp/helm"
+          - "waypoint/hashicorp/kubernetes-apply"
+          - "waypoint/hashicorp/kubernetes"
+          - "waypoint/hashicorp/nomad-jobspec-canary"
+          - "waypoint/hashicorp/nomad-jobspec"
+          - "waypoint/hashicorp/nomad"
+          - "waypoint/hashicorp/null"
+          - "waypoint/hashicorp/pack"
+          - "waypoint/hashicorp/terraform-cloud"
+          - "waypoint/hashicorp/vault"
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v3
